<resources>
    <string name="app_name">Snacks and Coffee</string>
    <string name="registrar">Registrar</string>
    <string name="login">Login</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="registar">Registar</string>
    <string name="fa_a_seu_registro">Faça seu Registro</string>
    <string name="celular">Celular</string>
    <string name="logo">Logo</string>
    <!-- Strings used for fragments for navigation -->

    <string name="efetue_seu_login">Efetue seu login</string>
    <string name="title_activity_logado">LogadoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Cardápio</string>
    <string name="title_notifications">Carrinho</string>
    <string name="pedido">Pedido</string>
    <string name="produto">Produto</string>
</resources>