<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="306dp"
        android:layout_height="196dp"
        android:layout_marginTop="80dp"
        android:clickable="false"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tela_inicial" />

    <TextView
        android:id="@+id/lbmensagem"
        android:layout_width="285dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:elegantTextHeight="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/efetue_seu_login"
        android:textAlignment="center"
        android:textColor="@color/marron_botao"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/textLoginEmail"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/icon_distance"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbmensagem" />

    <EditText
        android:id="@+id/textLoginSenha"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/icon_distance"
        android:ems="10"
        android:hint="@string/senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLoginEmail" />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="146dp"
        android:layout_height="48dp"

        android:layout_marginTop="72dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/marron_botao"
        android:text="@string/login"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLoginSenha" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="157dp"
        android:layout_height="48dp"

        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/marron_botao"
        android:text="@string/registrar"
        app:cornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLoginSenha" />

    <TextView
        android:id="@+id/textRecuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:clickable="true"
        android:focusable="false"
        android:linksClickable="true"
        android:text="Esqueci minha senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLoginSenha" />

    <ProgressBar
        android:id="@+id/barraLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="181dp"
        android:layout_height="175dp"
        android:indeterminateTint="@color/marron_botao"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>