<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegistroActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/xicara"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/fa_a_seu_registro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/marron_botao"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/edNome"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/icon_distance"
        android:focusable="true"
        android:hint="@string/nome_completo"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        app:layout_constraintBottom_toTopOf="@+id/edCelular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edCelular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_baseline_mobile_friendly_24"
        android:drawablePadding="@dimen/icon_distance"
        android:focusable="true"
        android:hint="@string/celular"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="13"
        android:minHeight="48dp"
        android:numeric="integer"
        android:textColorHighlight="#ff7eff15"
        app:layout_constraintBottom_toTopOf="@+id/edEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNome" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/icon_distance"
        android:focusable="true"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        app:layout_constraintBottom_toTopOf="@+id/edSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edCelular" />

    <EditText
        android:id="@+id/edSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/icon_distance"
        android:focusable="true"
        android:hint="@string/senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        app:layout_constraintBottom_toTopOf="@+id/btRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmail" />


    <Button
        android:id="@+id/btRegistrar"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="115dp"
        android:backgroundTint="@color/marron_botao"
        android:onClick="onEfetuaRegistro"
        android:text="@string/registrar"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edSenha" />

    <ProgressBar
        android:id="@+id/barraRegistro"
        style="?android:attr/progressBarStyle"
        android:layout_width="181dp"
        android:layout_height="175dp"
        android:indeterminateTint="@color/marron_botao"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>