<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="293dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/lbmensagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tela_inicial" />

    <TextView
        android:id="@+id/lbmensagem"
        android:layout_width="285dp"
        android:layout_height="47dp"
        android:elegantTextHeight="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/efetue_seu_login"
        android:textAlignment="center"
        android:textColor="@color/marron_botao"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edEmailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edEmailLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/icon_distance"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/EdSenha2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbmensagem" />

    <EditText
        android:id="@+id/EdSenha2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/icon_distance"
        android:ems="10"
        android:hint="@string/senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btValidaLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmailLogin" />


    <Button
        android:id="@+id/btValidaLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/marron_botao"
        android:onClick="ValidarLogin"
        android:text="@string/login"
        app:cornerRadius="25dp"

        app:layout_constraintBottom_toTopOf="@+id/btEntrarDireto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EdSenha2"
        tools:ignore="UnknownId" />

    <ProgressBar
        android:id="@+id/barraLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="181dp"
        android:layout_height="175dp"
        android:indeterminateTint="@color/marron_botao"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edrecuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:clickable="true"
        android:linksClickable="true"
        android:onClick="onEsqueciMinhaSenha"
        android:text="Esqueci minha senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EdSenha2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:tint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/lbmensagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbmensagem"
        app:layout_constraintVertical_bias="0.347"
        app:srcCompat="@drawable/ic_garfo" />

    <Button
        android:id="@+id/idtest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onTest"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btValidaLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>